<resources>
    <string name="app_name" translatable="false">Photo Blender</string>
    <string name="addtext">Add Text</string>
    <string name="blurphoto">Touch to Focus</string>
    <string name="captions">Captions</string>
    <string name="editcontrast">Contrast</string>
    <string name="editexposure">Exposure</string>
    <string name="edithightlightsave">Highlights Save</string>
    <string name="editphoto">Edit</string>
    <string name="editshadowsave">Shadows Save</string>
    <string name="editsharpen">Sharpen</string>
    <string name="edittemperature">Temperature</string>
    <string name="edittext">Edit Text</string>
    <string name="editvignette">Vignette</string>
    <string name="effects">Effects</string>
    <string name="emojis">Emojis</string>
    <string name="exampletext">Sample Text</string>
    <string name="frames">Shape</string>

    <string name="label_cancel">Cancel</string>
    <string name="label_ok">OK</string>
    <string name="more">More</string>
    <string name="moreapps">More Awesome Apps</string>
    <string name="permission_title_rationale">Permission needed</string>
    <string name="permission_write_storage_rationale">Storage write permission is needed to save the image.</string>
    <string name="random">Change Alpha</string>
    <string name="s1">Save image</string>
    <string name="s2">Allow Ad to store image in Picture gallery?</string>
    <string name="s3">Accept</string>
    <string name="s4">Decline</string>
    <string name="s5">Create calendar event</string>
    <string name="s6">Allow Ad to create a calendar event?</string>
    <string name="s7">Test Ad</string>
    <string name="savephoto">Saved to Gallery</string>
    <string name="search_menu_title">Search</string>
    <string name="shapecolor">Shape Colors</string>
    <string name="sharevia">Share via:</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="stickers">Stickers</string>
    <string name="galaxy">Overlay</string>
    <string name="opacity">Opacity</string>


    <string name="save_image_">Saving image..</string>
    <string name="saved">Image saved to:</string>
    <string name="select">Select Picture Using..</string>
    <string name="selectfrom">Select Picture From..</string>
    <string name="selectim">Select Image First</string>
    <string name="startover_alert">Clear All!</string>
    <string name="startover_msg">Do you really want to start over? All unsaved work will be lost.</string>
    <string name="delete">Delete</string>
    <string name="delete1">Delete?</string>
    <string name="are_you">Are you sure you want to delete?</string>
    <string name="cancel">Cancel</string>
    <string name="create_new">Create New</string>
    <string name="my_gallery">My Gallery</string>
    <string name="get_started">Get started</string>
    <string name="next">Next</string>
    <string name="title1">Blender</string>
    <string name="title2">Photo Editor</string>
    <string name="title3">Image</string>
    <string name="content1">Easy blending tools to make creative beautiful mixed images.</string>
    <string name="content2">Various effects, frames, stickers,... for blending images and backgrounds.</string>
    <string name="content3">Easy choosing multiple images from your image folders.</string>
    <string name="delete_success">Delete success</string>
    <string name="language">Language</string>
    <string name="rate">Rate</string>
    <string name="share">Share</string>
    <string name="more_app">More App</string>
    <string name="english">English</string>
    <string name="about">About</string>
    <string name="preview">Preview:</string>
    <string name="your_text">Your text here</string>
    <string name="save_ac">Image saved to Gallery</string>
    <string name="exit">Are you sure you want to exit?</string>
    <string name="stay">Stay</string>
    <string name="quit">Quit</string>
    <string name="selected">Select all</string>
    <string name="confirm">Confirm Exit?</string>

    <string name="privacy">Privacy Policy.</string>
    <string name="text_null">The text is empty.</string>
    <string name="all">All</string>
    <string name="camera">Camera</string>
    <string name="screenshots">Screenshots</string>
    <string name="downloads">Downloads</string>
    <string name="no_creation">No creation yet.</string>
    <string name="photo_save">Photo Save Successfully.</string>
    <string name="background">Background</string>
    <string name="image">Image</string>
    <string name="blend">Blend</string>
    <string name="photo">Photo</string>
    <string name="blender">Blender</string>
    <string name="this_action">This action may contain advertising</string>
    <string name="export">Exporting Image...</string>
    <string name="photo_blender">Photo Blender</string>

    <string name="Send_Email">Send Email</string>
    <string name="There_is_no">There is no</string>
    <string name="rate_us">Rate us</string>
    <string name="Thankyou">Thank you</string>
    <string name="effect">Effect</string>
    <string name="Change">Change</string>
    <string name="Frame">Frame</string>
    <string name="Sticker">Sticker</string>
    <string name="Text">Text</string>
    <string name="Skip">Skip</string>
    <string name="export_bar">Export</string>
    <string name="select_bg">Select Background</string>
    <string name="select_ig">Select Image</string>
    <string name="setting">Setting</string>
    <string name="Opacity">Opacity</string>
    <string name="Vignette">Vignette</string>
    <string name="opinion">Your opinion matter to us</string>
    <string name="you_know">If you enjoy this Photo Blender, would \nyou mind rating us on the Google Play, then?</string>
    <string name="not_now">Not now</string>
    <string name="choose">Choose Background color</string>
    <string name="ok">Ok</string>
    <string name="version">Version</string>
    <string name="per_miss">Storage permission is necessary.....</string>

</resources>
