<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_home"
    android:orientation="vertical"
    android:paddingBottom="@dimen/dp20"
    android:layout_marginHorizontal="@dimen/dp10">
    <TextView
        android:textStyle="bold"
        android:textSize="@dimen/sp18"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/dp20"
        android:layout_marginStart="@dimen/dp20"
        android:text="@string/delete1"
        style="@style/TextViewBaseToolbar"/>
    <TextView
        android:textColor="#5C5C5C"
        android:layout_marginTop="@dimen/dp10"
        android:layout_marginStart="@dimen/dp20"
        android:text="@string/are_you"
        style="@style/TextViewBaseToolbar"/>
    <View
        android:background="#E2E2E2"
        android:layout_marginTop="@dimen/dp10"
        android:layout_marginStart="@dimen/dp20"
        android:layout_marginEnd="@dimen/dp20"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>
    <LinearLayout
        android:layout_marginStart="@dimen/dp20"
        android:layout_marginEnd="@dimen/dp20"
        android:gravity="end"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tv_cancel"
            android:paddingVertical="@dimen/dp5"
            android:paddingStart="@dimen/dp10"
            android:paddingEnd="@dimen/dp10"
            android:textColor="#5C5C5C"
            android:layout_marginTop="@dimen/dp20"
            android:layout_marginStart="@dimen/dp20"
            android:text="@string/cancel"
            style="@style/TextViewBaseToolbar"/>
        <TextView
            android:id="@+id/tv_delete"
            android:paddingVertical="@dimen/dp5"
            android:paddingStart="@dimen/dp10"
            android:paddingEnd="@dimen/dp10"
            android:background="@drawable/bg_delete"
            android:layout_marginEnd="@dimen/dp10"
            android:textColor="#BA1A1A"
            android:layout_marginTop="@dimen/dp20"
            android:layout_marginStart="@dimen/dp20"
            android:text="@string/delete"
            style="@style/TextViewBaseToolbar"/>
    </LinearLayout>
</LinearLayout>