<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="@dimen/dp24"
    android:layout_marginHorizontal="@dimen/dp10"
    android:layout_marginTop="@dimen/dp10">

    <LinearLayout
        android:background="@color/white"
        android:padding="@dimen/dp20"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:textSize="@dimen/sp20"
            android:layout_width="wrap_content"
            android:text="@string/confirm"
            style="@style/TextViewBaseToolbar"/>
        <TextView
            android:textColor="#5C5C5C"
            android:layout_marginTop="@dimen/dp10"
            android:layout_width="match_parent"
            android:text="@string/exit"
            style="@style/TextViewBaseToolbar"/>

        <View
            android:layout_marginTop="@dimen/dp15"
            android:background="#E2E2E2"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>
        <RelativeLayout
            android:layout_marginTop="@dimen/dp20"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_toStartOf="@+id/exit"
                android:id="@+id/cancel"
                android:layout_width="wrap_content"
                android:layout_marginEnd="@dimen/dp40"
                android:paddingVertical="@dimen/dp8"
                android:textColor="#5C5C5C"
                android:paddingHorizontal="@dimen/dp10"
                android:text="@string/stay"
                style="@style/TextViewBaseToolbar"/>

            <TextView
                android:id="@+id/exit"
                style="@style/TextViewBaseToolbar"
                android:layout_width="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="@dimen/dp10"
                android:background="@drawable/bg_delete"
                android:gravity="center"
                android:paddingHorizontal="@dimen/dp20"
                android:paddingVertical="@dimen/dp8"
                android:text="@string/quit"
                android:textColor="#BA1A1A" />
        </RelativeLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>