<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="?attr/actionBarSize">

    <androidx.appcompat.widget.AppCompatImageView
        android:background="?android:attr/actionBarItemBackground"
        android:id="@+id/back"
        android:layout_width="@dimen/dp26"
        android:layout_height="@dimen/dp26"
        android:layout_marginStart="@dimen/dp10"
        android:src="@drawable/ic_left"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:visibility="gone"
        android:text="@string/cancel"
        android:background="?android:attr/actionBarItemBackground"
        android:id="@+id/cancel"
        style="@style/TextViewBaseToolbar"
        android:layout_marginStart="@dimen/dp10"
        android:src="@drawable/ic_left"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_toolbar"
        style="@style/TextViewBaseToolbar"
        android:text="@string/photo_blender"
        android:textColor="@color/black"
        android:textSize="@dimen/sp20"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:visibility="invisible"
        android:textSize="@dimen/sp16"
        android:foreground="?android:attr/selectableItemBackground"
        android:paddingVertical="@dimen/dp6"
        android:paddingHorizontal="@dimen/dp12"
        android:text="@string/selected"
        android:id="@+id/done_text"
        android:layout_marginEnd="@dimen/dp10"
        style="@style/TextViewBaseToolbar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:visibility="invisible"
        android:textSize="@dimen/sp16"
        android:foreground="?android:attr/selectableItemBackground"
        android:paddingVertical="@dimen/dp6"
        android:paddingHorizontal="@dimen/dp12"
        android:text="Unselect"
        android:id="@+id/done_text1"
        android:layout_marginEnd="@dimen/dp10"
        style="@style/TextViewBaseToolbar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp1"
        android:background="#E2E2E2"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>