<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:id="@+id/llcontrol"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_above="@+id/adView"
        android:background="#FEF8F6"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/ln_effect"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingVertical="@dimen/dp10">

            <ImageView
                android:id="@+id/iceffect"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:src="@drawable/effect" />

            <TextView
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_width="match_parent"
                android:id="@+id/tv_effect"
                style="@style/TextViewBaseToolbar"
                android:layout_marginTop="@dimen/dp5"
                android:text="@string/effect"
                android:textColor="@color/color_text"
                android:textSize="@dimen/sp13" />
        </LinearLayout>

        <LinearLayout
            android:paddingVertical="@dimen/dp10"
            android:id="@+id/ln_change"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/icrandom"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:src="@drawable/change" />

            <TextView
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_width="match_parent"
                android:id="@+id/tv_change"
                style="@style/TextViewBaseToolbar"
                android:layout_marginTop="@dimen/dp5"
                android:text="@string/Change"
                android:textColor="@color/color_text"
                android:textSize="@dimen/sp13" />
        </LinearLayout>

        <LinearLayout
            android:paddingVertical="@dimen/dp10"
            android:id="@+id/ln_frame"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/icframe"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:src="@drawable/filter_frames" />

            <TextView
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_width="match_parent"
                android:id="@+id/tv_frame"
                style="@style/TextViewBaseToolbar"
                android:layout_marginTop="@dimen/dp5"
                android:text="@string/Frame"
                android:textColor="@color/color_text"
                android:textSize="@dimen/sp13" />
        </LinearLayout>

        <LinearLayout
            android:paddingVertical="@dimen/dp10"
            android:id="@+id/ln_sticker"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/icsnap"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:src="@drawable/sticker" />

            <TextView
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_width="match_parent"
                android:id="@+id/tv_sticker"
                style="@style/TextViewBaseToolbar"
                android:layout_marginTop="@dimen/dp5"
                android:text="@string/Sticker"
                android:textColor="@color/color_text"
                android:textSize="@dimen/sp13" />
        </LinearLayout>

        <LinearLayout
            android:paddingVertical="@dimen/dp10"
            android:id="@+id/ln_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ictext"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:src="@drawable/insert_text" />

            <TextView
                android:layout_width="match_parent"
                android:id="@+id/tv_text"
                style="@style/TextViewBaseToolbar"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/dp5"
                android:gravity="center"
                android:text="@string/Text"
                android:textColor="@color/color_text"
                android:textSize="@dimen/sp13" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>